--- a/comic-web/src/app/comicpage/container/container.component.html
+++ b/comic-web/src/app/comicpage/container/container.component.html
@@ -27,9 +27,11 @@
     </div>
 
     <!-- Empty state when no comics are available -->
-    <div *ngIf="isComicsEmpty()" class="no-comics-message">
-      <h3>No comics available</h3>
-      <p>Check your connection and try refreshing the page.</p>
-    </div>
+    @if (isComicsEmpty()) {
+      <div class="no-comics-message">
+        <h3>No comics available</h3>
+        <p>Check your connection and try refreshing the page.</p>
+      </div>
+    }
   </cdk-virtual-scroll-viewport>
 </div>
