--- a/comic-web/src/app/refresh/refresh.component.html
+++ b/comic-web/src/app/refresh/refresh.component.html
@@ -1,9 +1,9 @@
-@if (messageService.messages.length) {
+@if (messageService.messages().length) {
   <div>
     <h2>Messages</h2>
     <button mat-button
     (click)="messageService.clear()">clear</button>
-    @for (message of messageService.messages; track message) {
+    @for (message of messageService.messages(); track message) {
       <div> {{message}} </div>
     }
   </div>
