--- a/comic-web/src/app/app.component.html
+++ b/comic-web/src/app/app.component.html
@@ -3,7 +3,7 @@
     <a mat-button href="https://github.com/KKDad/ComicCacher" target="_blank" rel="noopener noreferrer">
       Project
     </a>
-    <a mat-button href="docs/index.html" target="_blank" rel="noopener noreferrer">
+    <a mat-button href="/swagger-ui.html" target="_blank" rel="noopener noreferrer">
       API
     </a>
   </div>
